# mbtiles

./: README.md  pyproject.toml  vector_tile.proto
mbtiles_tools/: render_tk.py  styling.py  tile.py  vector_tile_pb2.py  vector_tile_pb2.pyi
tests/: 14_8609_5863.pbf
tests/integration/: test_render_image.py
tests/unit/: test_geometry_parsing.py
