[project]
name = "parse-mbtiles"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacopo Farina", email = "jacopo1.farina@gmail.com"},
]
dependencies = [
    "protobuf>=4.21.9",
    "Pillow>=9.3.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "setuptools>=65.6.0",
    "types-protobuf>=3.20.4.5",
    "pytest>=7.2.0",
    "black>=22.10.0",
    "mypy-protobuf>=3.4.0",
    "types-Pillow>=9.3.0.2",
    "pytest-cov>=4.0.0",
]

[tool.pdm.scripts]
mypy = {cmd = [
    "mypy",
    "--strict",
    # this is to avoid the __init__.py
    "--explicit-package-bases",
    "mbtiles_tools",
]}
black = {cmd = [
    "black",
    "mbtiles_tools",
]}
test_with_coverage = {cmd = [
    "pytest",
    "--cov=mbtiles_tools",
    "--cov-report",
    "html",
    "tests/",
]}

generate_protobuf_parser = {cmd = [
    "protoc",
    "-I=.",
    "vector_tile.proto",
    "--python_out=vector_tile_protoc",
    "--mypy_out=vector_tile_protoc",
]}
